--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FRANXX</title>
 
-    <link rel="stylesheet" href="Stile.css">
+    <link rel="stylesheet" href="stile.css">
 
     <!-- Imagen del Logo-->
     <link rel="shortcut icon" href="Vans-Logo.png" type="image/x-icon">
